# DataLik

./: README.md
DataLik/: app.py  pyproject.toml  replit.md
DataLik/attached_assets/: Pasted-Finance-plays-a-crucial-role-in-managing-the-financial-health-of-an-organization-It-encompasses-acc-1753776228819_1753776228822.txt  Pasted-Here-is-my-PRP-help-me-build-it-Product-Name-working-title-DataLink-Unidata-or-feel-fr-1753773452164_1753773452164.txt
DataLik/data/: users.yaml
DataLik/modules/: database_admin.py  finance.py  sales.py
DataLik/utils/: auth.py  charts.py  data_processor.py  database.py  exports.py
